[package]
name = "gol"
description = "Conway's Game of Life simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = [ "derive" ] }
log = "0.4"
env_logger = "0.9"
winit = "0.27"
wgpu = "0.13.1  "
rand = "0.8"
crossbeam-channel = "0.5"
thiserror = "1.0"
pollster = "0.2.5"
bytemuck = "1.12.1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "patterns"
harness = false

[[bench]]
name = "random"
harness = false
